--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -695,7 +695,7 @@ stargazer::stargazer(
 <tr><td style="text-align:left">Constante</td><td>-0.883<sup>***</sup></td><td>-0.009</td></tr>
 <tr><td style="text-align:left"></td><td>(0.082)</td><td>(0.053)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>5,570</td><td>5,570</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observações</td><td>5,570</td><td>5,570</td></tr>
 <tr><td style="text-align:left">R<sup>2</sup></td><td>0.002</td><td>0.011</td></tr>
 <!-- <tr><td style="text-align:left">R Ajustado<sup>2</sup></td><td>0.002</td><td>0.011</td></tr> -->
 <!-- <tr><td style="text-align:left">Erro Padrão Residual</td><td>0.355 (df = 5550)</td><td>0.238 (df = 5542)</td></tr> -->
@@ -789,7 +789,7 @@ stargazer::stargazer(
 <tr><td style="text-align:left">Constante</td><td>1.837<sup>***</sup></td><td>1.887<sup>***</sup></td></tr>
 <tr><td style="text-align:left"></td><td>(0.037)</td><td>(0.032)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td></tr>
-<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>5,570</td><td>5,570</td></tr>
+<tr><td colspan="3" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observações</td><td>5,570</td><td>5,570</td></tr>
 <tr><td style="text-align:left">R<sup>2</sup></td><td>0.450</td><td>0.358</td></tr>
 <!-- <tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.449</td><td>0.358</td></tr> -->
 <!-- <tr><td style="text-align:left">Residual Std. Error</td><td>0.158 (df = 5515)</td><td>0.143 (df = 5505)</td></tr> -->
